--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.2",
     "cra-template": "1.0.0",
     "history": "^4.10.1",
     "polished": "^3.4.2",
@@ -17,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "json-server server.json -p 3333 -w"
   },
   "eslintConfig": {
     "extends": "react-app"
